RESOLVED FIXED 243574
AX ITM: CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::AXIsolatedTree::updateChildren
https://bugs.webkit.org/show_bug.cgi?id=243574
Summary AX ITM: CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCor...
Andres Gonzalez
Reported 2022-08-04 19:04:24 PDT
Attachments
Patch (11.46 KB, patch)
2022-08-04 20:03 PDT, Andres Gonzalez
no flags
Patch (11.43 KB, patch)
2022-08-05 11:16 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2022-08-04 19:04:35 PDT
Andres Gonzalez
Comment 2 2022-08-04 19:20:19 PDT
11 __pthread_kill 11 pthread_kill 11 abort 11 abort_message 11 __cxa_pure_virtual ==> 19 WebCore::AXIsolatedTree::updateChildren(WebCore::AXCoreObject&, WebCore::AXIsolatedTree::ResolveNodeChanges) <== 19 WebCore::AXIsolatedTree::updateChildren(WebCore::AXCoreObject&, WebCore::AXIsolatedTree::ResolveNodeChanges) 19 WebCore::AXObjectCache::updateIsolatedTree(WTF::Vector<std::__1::pair<WTF::RefPtr<WebCore::AXCoreObject, WTF::RawPtrTraits<WebCore::AXCoreObject>, WTF::DefaultRefDerefTraits<WebCore::AXCoreObject> >, WebCore::AXObjectCache::AXNotification>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) 19 WebCore::AXObjectCache::updateIsolatedTree(WebCore::AXCoreObject&, WebCore::AXObjectCache::AXNotification) 19 WebCore::AXObjectCache::handleChildrenChanged(WebCore::AccessibilityObject&) 19 WebCore::AXObjectCache::handleAttributeChange(WebCore::Element*, WebCore::QualifiedName const&) 19 WebCore::Element::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 12
Radar WebKit Bug Importer
Comment 3 2022-08-04 19:20:47 PDT
Andres Gonzalez
Comment 4 2022-08-04 19:22:13 PDT
Radar WebKit Bug Importer
Comment 5 2022-08-04 19:22:22 PDT
Andres Gonzalez
Comment 6 2022-08-04 20:03:32 PDT
Darin Adler
Comment 7 2022-08-05 11:06:22 PDT
Comment on attachment 461415 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=461415&action=review > Source/WebCore/accessibility/AccessibilityMenuListPopup.cpp:156 > + RefPtr<AccessibilityObject> child = downcast<AccessibilityObject>(m_children[optionIndex].get()); Should just write RefPtr instead of RefPtr<AccessibilityObject>.
Andres Gonzalez
Comment 8 2022-08-05 11:16:25 PDT
EWS
Comment 9 2022-08-06 09:12:42 PDT
Committed 253180@main (9a9375a00e57): <https://commits.webkit.org/253180@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461427 [details].
Note You need to log in before you can comment on or make changes to this bug.