AX ITM: CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::AXIsolatedTree::updateChildren web content https://bugs.webkit.org/show_bug.cgi?id=243574

Reviewed by Darin Adler.

The crash cause seems to be the pointer liveChild becoming dangling between the line where it is initialized with a dynamic cast and its dereference in the last line of the block. This happens because the object to which it is pointing is removed during the operations that occur in between those lines. Instead, we now keep a local Ref to the child, so that even if it is removed from its parent, liveChild will be referencing the right object in this scope.

In addition, this patch changes the type of the AXCoreObject argument to the AXIsolatedTree::update methods to the actual type that should be passed, AccessibilityObject. This eliminates the need of dynamic cast of the live objects and their children to AccessibilityObjects, and instead use a downcast when needed.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::notificationPostTimerFired):
(WebCore::AXObjectCache::postNotification):
(WebCore::AXObjectCache::handleRowCountChanged):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityMenuListPopup.cpp:
(WebCore::AccessibilityMenuListPopup::didUpdateActiveOption):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateChildren):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:

Canonical link: https://commits.webkit.org/253180@main