Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h
@@ -43,6 +43,7 @@ namespace WebCore {
 
 class AXIsolatedObject;
 class AXObjectCache;
+class AccessibilityObject;
 class Page;
 enum class AXStreamOptions : uint8_t;
 
@@ -346,7 +347,7 @@ public:
     void generateSubtree(AXCoreObject&);
     void updateNode(AXCoreObject&);
     enum class ResolveNodeChanges : bool { No, Yes };
-    void updateChildren(AXCoreObject&, ResolveNodeChanges = ResolveNodeChanges::Yes);
+    void updateChildren(AccessibilityObject&, ResolveNodeChanges = ResolveNodeChanges::Yes);
     void updateNodeProperty(AXCoreObject&, AXPropertyName);
     void updateNodeAndDependentProperties(AXCoreObject&);
 
